--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
+    "client":"npm start --prefix frontend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Banuka Dananjaya",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2"
   },
   "devDependencies": {
